--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,27 @@ jobs:
         run: ./gradlew androidDependencies --stacktrace
       - name: Run Tests
         run: ./gradlew check --stacktrace
+  build-release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v2
+      - name: Cache Dependencies
+        id: cache-dependencies
+        uses: actions/cache@v2.1.4
+        with:
+          path: |
+            ~/.gradle/caches/modules-2
+            ~/.gradle/caches/transforms-2
+          key: build-${{ hashFiles('build.gradle') }}-${{ hashFiles('dependencies.gradle') }}-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('app/build.gradle') }}
+      - name: Get Dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: ./gradlew androidDependencies --stacktrace
+      - name: Build Release Bundle - .aab
+        env:
+          CLIENT_GITHUB_KEY_PASS: ${{ secrets.CLIENT_GITHUB_KEY_PASS }}
+          CLIENT_GITHUB_STORE_PASS: ${{ secrets.CLIENT_GITHUB_STORE_PASS }}
+        run: ./gradlew bundleRelease --stacktrace
   ui-tests:
     runs-on: ubuntu-latest
     steps:
