--- a/feature/in-app-update/build.gradle
+++ b/feature/in-app-update/build.gradle
@@ -13,12 +13,12 @@ android {
 dependencies {
   implementation project(':core-api')
   implementation project(':core-android-api')
-  implementation project(':feature:config-debug-api')
+    implementation project(':feature:config-debug-api')
 
   kapt daggerAnnotationProcessor
   implementation dagger
 
-  implementation 'com.google.android.play:core:1.10.3'
+  implementation 'com.google.android.play:app-update:2.1.0'
 
   implementation 'com.jakewharton.timber:timber:5.0.1'
 
